--- a/main.css
+++ b/main.css
@@ -1803,6 +1803,135 @@
   .mx-xl-auto {
     margin-left: auto !important; } }
 
+.d-none {
+  display: none !important; }
+
+.d-inline {
+  display: inline !important; }
+
+.d-inline-block {
+  display: inline-block !important; }
+
+.d-block {
+  display: block !important; }
+
+.d-table {
+  display: table !important; }
+
+.d-table-row {
+  display: table-row !important; }
+
+.d-table-cell {
+  display: table-cell !important; }
+
+.d-flex {
+  display: flex !important; }
+
+.d-inline-flex {
+  display: inline-flex !important; }
+
+@media (min-width: 576px) {
+  .d-sm-none {
+    display: none !important; }
+  .d-sm-inline {
+    display: inline !important; }
+  .d-sm-inline-block {
+    display: inline-block !important; }
+  .d-sm-block {
+    display: block !important; }
+  .d-sm-table {
+    display: table !important; }
+  .d-sm-table-row {
+    display: table-row !important; }
+  .d-sm-table-cell {
+    display: table-cell !important; }
+  .d-sm-flex {
+    display: flex !important; }
+  .d-sm-inline-flex {
+    display: inline-flex !important; } }
+
+@media (min-width: 768px) {
+  .d-md-none {
+    display: none !important; }
+  .d-md-inline {
+    display: inline !important; }
+  .d-md-inline-block {
+    display: inline-block !important; }
+  .d-md-block {
+    display: block !important; }
+  .d-md-table {
+    display: table !important; }
+  .d-md-table-row {
+    display: table-row !important; }
+  .d-md-table-cell {
+    display: table-cell !important; }
+  .d-md-flex {
+    display: flex !important; }
+  .d-md-inline-flex {
+    display: inline-flex !important; } }
+
+@media (min-width: 992px) {
+  .d-lg-none {
+    display: none !important; }
+  .d-lg-inline {
+    display: inline !important; }
+  .d-lg-inline-block {
+    display: inline-block !important; }
+  .d-lg-block {
+    display: block !important; }
+  .d-lg-table {
+    display: table !important; }
+  .d-lg-table-row {
+    display: table-row !important; }
+  .d-lg-table-cell {
+    display: table-cell !important; }
+  .d-lg-flex {
+    display: flex !important; }
+  .d-lg-inline-flex {
+    display: inline-flex !important; } }
+
+@media (min-width: 1200px) {
+  .d-xl-none {
+    display: none !important; }
+  .d-xl-inline {
+    display: inline !important; }
+  .d-xl-inline-block {
+    display: inline-block !important; }
+  .d-xl-block {
+    display: block !important; }
+  .d-xl-table {
+    display: table !important; }
+  .d-xl-table-row {
+    display: table-row !important; }
+  .d-xl-table-cell {
+    display: table-cell !important; }
+  .d-xl-flex {
+    display: flex !important; }
+  .d-xl-inline-flex {
+    display: inline-flex !important; } }
+
+.d-print-block {
+  display: none !important; }
+  @media print {
+    .d-print-block {
+      display: block !important; } }
+
+.d-print-inline {
+  display: none !important; }
+  @media print {
+    .d-print-inline {
+      display: inline !important; } }
+
+.d-print-inline-block {
+  display: none !important; }
+  @media print {
+    .d-print-inline-block {
+      display: inline-block !important; } }
+
+@media print {
+  .d-print-none {
+    display: none !important; } }
+
 @font-face {
   font-family: "LeagueGothicRegular";
   src: url("../fonts/League-Gothic/LeagueGothic-Regular.otf");
@@ -1846,11 +1975,10 @@ main {
   margin-left: 68px; }
 
 .post {
-  border: 5px solid #ffffff;
-  margin-left: 26px;
+  border: 3px solid #ffffff;
+  margin-left: 28px;
   margin-bottom: 24px;
   padding: 0px;
-  max-width: min-content;
   background-color: #ffffff; }
   .post span {
     color: #ffffff;
@@ -1858,11 +1986,11 @@ main {
     text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3); }
   .post span.month {
     position: absolute;
-    top: 30px;
+    top: 26px;
     right: 5px; }
   .post span.day {
     position: absolute;
-    top: 70px;
+    top: 66px;
     right: 5px; }
   .post h2 {
     font-size: 30px;
@@ -1881,8 +2009,7 @@ main {
     padding-left: 10px;
     padding-right: 14px; }
   .post div.border {
-    border: 1px dotted #BCBCBC;
-    margin-top: 10px; }
+    border: 1px dotted #BCBCBC; }
   .post .post-text {
     font-family: "Droid Sans";
     font-size: 13px;
@@ -1903,9 +2030,8 @@ main {
   right: 0px; }
   .post-category ul {
     list-style: none;
-    padding: 2px 5px 2px 5px;
-    margin-top: 2px;
-    margin-bottom: 2px; }
+    margin: 0px;
+    padding: 0px 8px 0px 12px; }
     .post-category ul a {
       text-decoration: none;
       text-transform: uppercase;
