--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -51,11 +51,11 @@ main {
 }
 
 .post {
-    border: 5px solid $main-link-color;
-    margin-left: 26px;
+    border: 3px solid $main-link-color;
+    margin-left: 28px;
     margin-bottom: 24px;
     padding: 0px;
-    max-width: min-content;
+    //max-width: min-content;
     background-color: $main-link-color;
     span {
         color: $main-link-color;
@@ -64,12 +64,12 @@ main {
     }
     span.month {
         position: absolute;
-        top: 30px;
+        top: 26px;
         right: 5px;
     }
     span.day {
         position: absolute;
-        top: 70px;
+        top: 66px;
         right: 5px;
     }
     h2 {
@@ -93,7 +93,6 @@ main {
     }
     div.border {
         border: 1px dotted #BCBCBC;
-        margin-top: 10px;
     }
     .post-text {
         font-family: $font-family-secondary;
@@ -118,9 +117,8 @@ main {
     right: 0px;
     ul {
         list-style: none;
-        padding: 2px 5px 2px 5px;
-        margin-top: 2px;
-        margin-bottom: 2px;
+        margin: 0px;
+        padding: 0px 8px 0px 12px;
         a {
             text-decoration: none;
             text-transform: uppercase;
